[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/FilledHeart.png" type="Texture" id=1]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/Arrows.png" type="Texture" id=3]
[ext_resource path="res://Score.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Explosion" parent="." instance=ExtResource( 2 )]
position = Vector2( 55, -51 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 3, 24 )
rotation = 0.543789
texture = ExtResource( 1 )

[node name="Explosion2" parent="." instance=ExtResource( 2 )]
position = Vector2( 79, 11 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( -3, 32 )
rotation = 0.973101
texture = ExtResource( 1 )

[node name="Explosion3" parent="." instance=ExtResource( 2 )]
position = Vector2( 71, 53 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
